--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -29,7 +29,7 @@
                                 click.delegate="toggle_sign(item.option, $event)">
                             </i>
                             <i class="far fa-times-circle tool ${highlight_unselectors}" t="[title]multi-select.unselect"
-                                css="margin-left:${item.first ? 0 : settings.can_set_sign ? 36 : 20}px"
+                                css="margin-left:${item.first ? 0 : settings.can_set_sign ? 40 : settings.can_group ? 20 : 0}px"
                                 click.delegate="unselect_item(item, $index)">
                             </i>
                             <i class="far fa-exchange-alt tool" t="[title]multi-select.change-group"
@@ -49,7 +49,7 @@
         <!-- unselected options -->
         <div class="row options unselected ${theme.rtltr}" css="max-height:${option_list_height}px;min-height:132px;"
             if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter)) ">
-            <ul css="width:${width}px;padding-left:20px;" if.bind="true || unselected_options===[]">
+            <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li if.bind="can_show_untagged" class="${to_show_untagged ? 'active' : 'ready'} untag-button"
                     click.delegate="show_untagged()">${show_untagged_caption}
                 </li>
