--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -169,16 +169,20 @@
                             selectedval.two-way="params.selected_story_visibility">
                         </selector>
                     </div>
-                    <div class="row" style="margin-top: 20px;" if.bind="user.isLoggedIn">
+                    <div class="row" style="margin-top: 20px;">
                         <form role="form" onsubmit="return false">
                             <select value.bind="params.order_option" style="height:32px;width:90%;"
                                 change.delegate="handle_order_change($event)">
                                 <option repeat.for="option of order_options" model.bind="option">${option.name}</option>
                             </select>
-                            <div if.bind="params.order_option.value =='by-name'">
+                            <div if.bind="params.order_option.value =='by-name' && start_name_history.length > 0">
                                 <input type="text" value.bind="params.start_name"
+                                    list="start-name-history"
                                     change.delegate="handle_start_name_change($event)" 
                                     style="width:90%;margin-top:8px;height:32px;" t="[placeholder]stories.start-name"/>
+                                    <datalist id="start-name-history">
+                                        <option repeat.for="option of start_name_history" value.bind="option"></option>
+                                    </datalist>
                             </div>
                         </form>
                     </div>
