--- a/src/admin/customize.html
+++ b/src/admin/customize.html
@@ -114,6 +114,13 @@
                             <span style="font-weight:bolder">${aro & t}</span>
                         </button>
                     </div>
+                    <div style="margin-bottom:5px;">
+                        <label style="margin-left:8px;width:200px;">
+                            ${'admin.promoted-story-expiration' & t}
+                        </label>
+                        <input type="number" style="margin-left:8px;margin-right:-4px;width:200px;"
+                            value.bind="promoted_story_expiration" change.delegate="set_promoted_story_expiration()"/>
+                    </div>
                 </div>
             </div>
         </ux-dialog-body>
