--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -3,14 +3,13 @@
     <div class="content-area photo-detail unselectable">
         <div class="detail-header">
             <div style="float:left;cursor:pointer;padding:0;margin:0;" if.bind="theme.is_desktop">
-                <chat-button chatroom_id.two-way="chatroom_id" 
-                             caption.bind="'photos.add-details'" 
-                             new-chatroom.delegate="create_chatroom()"
-                             chatroom-deleted.delegate="chatroom_deleted($event)">
+                <chat-button chatroom_id.two-way="chatroom_id" caption.bind="'photos.add-details'"
+                    new-chatroom.delegate="create_chatroom()" chatroom-deleted.delegate="chatroom_deleted($event)">
                 </chat-button>
                 <i class="far fa-lg fa-arrow-up fa-rotate-90 ${next_class}" t="[title]photos.next-slide"
                     click.trigger="go_next($event)" if.bind="photo_ids.length > 1"></i>
-                <i class="far fa-lg fa-arrow-up" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
+                <i class="far fa-lg fa-arrow-up" t="[title]go-back" click.trigger="go_back()"
+                    if.bind="theme.is_desktop"></i>
                 <i class="far fa-lg fa-arrow-up fa-rotate-270 ${prev_class}" t="[title]photos.prev-slide"
                     click.trigger="go_prev($event)" if.bind="photo_ids.length > 1"></i>
             </div>
@@ -25,10 +24,11 @@
         <div class="row">
             <div class="col-md-7" style="display:flex;flex-direction:column;margin-top:16px;" id="photo-box">
                 <img src.bind="photo_src" width="${photo_width}" click.trigger="open_full_size_photo()" />
-                
+
                 <span>
                     <span dir="${theme.rtltr}" if.bind="photo_story.name">${photo_story.name}</span>
-                    <button class="btn btn-basic" if.bind="user.editing || has_location" click.delegate="expose_map()" style="margin-top:8px;border:solid 2px lightgray;float:left;">
+                    <button class="btn btn-basic" if.bind="user.editing || has_location" click.delegate="expose_map()"
+                        style="margin-top:8px;border:solid 2px lightgray;float:left;">
                         <i class="fa fa-map-marker-alt" style="color:dodgerblue"></i> ${view_hide_map}
                     </button>
                     <!-- <input type="number" if.bind="map_visible" min="1" max="25" value.bind="zoom" 
@@ -55,14 +55,10 @@
                 <div class="row" style="padding-right:15px;">
                     <div class="fr-view" dir="rtl">
                         <div show.bind="map_visible">
-                            <google-map
-                                longitude.two-way="longitude" 
-                                latitude.two-way="latitude"
-                                map-click.delegate="create_marker($event)" 
-                                bounds-change.delegate="bounds_changed($event)"
-                                markers.bind="markers" 
-                                zoom.bind="zoom"
-                                auto-update-bounds="true" >
+                            <google-map longitude.two-way="longitude" latitude.two-way="latitude"
+                                map-click.delegate="create_marker($event)"
+                                bounds-change.delegate="bounds_changed($event)" markers.bind="markers" zoom.bind="zoom"
+                                auto-update-bounds="true">
                             </google-map>
                         </div>
                         <div style="padding-right:0" if.bind="! map_visible">
@@ -116,6 +112,12 @@
                                             name-changed.delegate="photographer_name_changed($event)"
                                             ms-change.delegate="handle_photographer_change($event)">
                                         </multi-select>
+                                    </div>
+                                    <div style="margin-top: 10px;margin-bottom:2px;font-size:120%">
+                                        <button if.bind="undo_list.length > 0" class="btn btn-warning"
+                                            style="width:90%;" click.delegate="undo()">
+                                            <i class="fa fa-lg fa-undo"> ${'photos.undo-last-change' & t}</i>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
