photos page toolbar spacing

--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -32,36 +32,37 @@
                                 <button t="[title]videos.next" class="btn btn-default" click.delegate="next($event)" disabled.bind="next_disabled"><i class="fas fa-chevron-right"></i></button>
                                 <button t="[title]videos.prev" class="btn btn-default" click.delegate="prev($event)" disabled.bind="prev_disabled"><i class="fas fa-chevron-left"></i></button>
                             </div>
-                            <div if.bind="(! got_duplicates) && params.photo_ids.length == 0 && params.selected_order_option == 'random-order'" class="form-group hide-if-small">
+                            <div if.bind="(! got_duplicates) && params.photo_ids.length == 0 && params.selected_order_option == 'random-order'" class="form-group hide-if-small toolbar">
                                 <button class="btn btn-basic btn-md" click.delegate="select_member($event)">
                                     ${with_a_member_text}
                                 </button>
                             </div>
-                            <div if.bind="params.photo_ids.length > 0" class="form-group hide-if-small">
+                            <div if.bind="params.photo_ids.length > 0" class="form-group hide-if-small toolbar toolbar">
                                 <button class="btn btn-basic btn-md" click.delegate="show_all_photos($event)">
                                     ${'photos.any-photo' & t}
                                 </button>
                             </div>
-                            <div class="form-group" if.bind="phase=='can-merge-topics'">
+                            <div class="form-group toolbar" if.bind="phase=='can-merge-topics'">
                                 <button class="btn btn-basic btn-md" click.trigger="save_merges($event)">
                                     ${'photos.save-merges' & t}
                                 </button>
                                 <help topic="photos.can-modify-tags", position="bottom"></help>
                             </div>
-                            <div if.bind="phase=='can-create-group'" class="form-group">
+                            <div if.bind="phase=='can-create-group'" class="form-group toolbar">
                                 <button class="btn btn-basic btn-md" click.trigger="save_topic_group($event)">
                                     ${'photos.save-topic-group' & t}
                                 </button>
                                 <help topic="photos.can-create-group", position="bottom"></help>
                             </div>
-                            <div class="form-group">
-                                <button if.bind="selected_photos.size > 0" t="[title]photos.download" class="btn btn-basic btn-md" click.delegate="download_photos()"><i class="fa fa-upload fa-rotate-180 fa-xs"></i></button>
+                            <div class="form-group toolbar" if.bind="selected_photos.size > 0 && !user.editing">
+                                <button t="[title]photos.download" class="btn btn-basic btn-md" 
+                                    click.delegate="download_photos()"><i class="fa fa-upload fa-rotate-180 fa-xs"></i></button>
                             </div>
-                            <div class="form-group">
-                                <button if.bind="user.privileges.ADMIN && user.editing && selected_photos.size > 0" t="[title]photos.delete" class="btn btn-basic btn-md" click.delegate="delete_selected_photos()"><i class="far fa-trash-alt fa-xs"></i></button>
+                            <div class="form-group toolbar" if.bind="user.privileges.ADMIN && user.editing && selected_photos.size > 0">
+                                <button t="[title]photos.delete" class="btn btn-warning btn-md" click.delegate="delete_selected_photos()"><i class="far fa-trash-alt fa-xs"></i></button>
                             </div>
-                            <div class="form-group">
-                                <button if.bind="user.privileges.ADMIN && selected_photos.size > 0" t="[title]photos.rotate" class="btn btn-basic btn-md" click.delegate="rotate_selected_photos()"><i class="fa fa-undo fa-xs"></i></button>
+                            <div class="form-group toolbar" if.bind="user.privileges.ADMIN && selected_photos.size > 0">
+                                <button t="[title]photos.rotate" class="btn btn-basic btn-md" click.delegate="rotate_selected_photos()"><i class="fa fa-undo fa-xs"></i></button>
                             </div>
                             <div class="form-group" if.bind="! editing_filters">
                                 <button class="btn btn-basic btn-sm btn-framed" 
@@ -70,7 +71,7 @@
                                     click.delegate="show_filters_only()">${'photos.edit-filters' & t}
                                 </button>
                             </div>
-                            <div class="form-group" if.bind="can_pair_photos">
+                            <div class="form-group toolbar" if.bind="can_pair_photos">
                                 <button t="[title]photos.pair" class="btn btn-basic btn-md" click.delegate="pair_selected_photos()"><i class="far fa-yin-yang"></i></i></button>
                             </div>
                             <div class="form-group" if.bind="phase=='photos-ready-to-edit' && ! after_upload">
@@ -82,7 +83,7 @@
                             <div class="form-group" if.bind="phase=='applying-to-photos' && ! got_duplicates && ! working">
                                 <button 
                                     disabled.bind="params.selected_topics.length==0 && params.selected_photographers.length != 1 && params.photos_date_str == ''"
-                                    class="btn btn-basic btn-md" 
+                                    class="btn btn-warning btn-md" 
                                     click.trigger="apply_to_selected()">
                                     ${'photos.apply-to-selected' & t}
                                 </button>
